policies/kyverno/tests/networking-adopt/patched/svc-external-instance.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-external-instance
  namespace: workloads
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-priv-a,subnet-priv-b
spec:
  type: LoadBalancer
  ports:
    - port: 80
