policies/kyverno/tests/networking-adopt/patched/svc-legacy-internal-false.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-legacy-internal-false
  namespace: workloads
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-pub-a,subnet-pub-b
spec:
  type: LoadBalancer
  ports:
    - port: 80
