policies/kyverno/tests/networking-adopt/patched/svc-plain.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-plain
  namespace: workloads
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-priv-a,subnet-priv-b
spec:
  type: LoadBalancer
  ports:
    - port: 80
