policies/kyverno/tests/networking-adopt/patched/svc-scheme-beats-legacy.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-scheme-beats-legacy
  namespace: workloads
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-priv-a,subnet-priv-b
spec:
  type: LoadBalancer
  ports:
    - port: 80
